[gd_scene load_steps=8 format=3 uid="uid://cos26i6wfyvs0"]

[ext_resource type="Script" uid="uid://bo4t2qduwnsm0" path="res://scripts/load.gd" id="1_4l62w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bf5ck"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kngc3"]
bg_color = Color(0, 0.647733, 0.903827, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.646257, 0.819201, 1, 1)
border_blend = true
corner_radius_top_left = 859
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024
shadow_color = Color(0.099, 0.67, 1, 0.854)
shadow_size = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gqje5"]
bg_color = Color(0, 0.647733, 0.903827, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.646257, 0.819201, 1, 1)
border_blend = true
corner_radius_top_left = 1024
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024
shadow_color = Color(0.099, 0.67, 1, 0.854)
shadow_size = 25

[sub_resource type="Theme" id="Theme_r21rg"]
Button/colors/font_color = Color(0.284398, 0.000272228, 0.877517, 1)
Button/colors/font_focus_color = Color(0.433069, 0.241361, 1, 1)
Button/colors/font_hover_color = Color(0.431373, 0.243137, 1, 1)
Button/colors/font_hover_pressed_color = Color(0.431373, 0.243137, 1, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(0.431373, 0.243137, 1, 1)
Button/constants/outline_size = 20
Button/font_sizes/font_size = 35
Button/styles/focus = SubResource("StyleBoxEmpty_bf5ck")
Button/styles/hover = SubResource("StyleBoxFlat_kngc3")
Button/styles/normal = SubResource("StyleBoxFlat_kngc3")
Button/styles/pressed = SubResource("StyleBoxFlat_gqje5")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4l62w"]
bg_color = Color(0, 0.717647, 0.341176, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.647059, 0.819608, 1, 1)
border_blend = true
corner_radius_top_left = 1024
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024
shadow_color = Color(0.0980392, 0.670588, 1, 0.854902)
shadow_size = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iigv4"]
bg_color = Color(0, 0.719491, 0.343082, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.646257, 0.819201, 1, 1)
border_blend = true
corner_radius_top_left = 1024
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024
shadow_color = Color(0.099, 0.67, 1, 0.854)
shadow_size = 25

[node name="load" type="Button"]
custom_minimum_size = Vector2(400, 79)
offset_right = 400.0
offset_bottom = 79.0
focus_neighbor_left = NodePath("del")
focus_neighbor_right = NodePath("del")
theme = SubResource("Theme_r21rg")
theme_override_colors/font_hover_color = Color(0.611765, 0.396078, 0, 1)
theme_override_colors/icon_hover_color = Color(0.611765, 0.396078, 0, 1)
theme_override_colors/icon_normal_color = Color(1, 0.658824, 0, 1)
theme_override_colors/font_color = Color(1, 0.658824, 0, 1)
theme_override_colors/font_focus_color = Color(0.611765, 0.396078, 0, 1)
theme_override_font_sizes/font_size = 35
theme_override_styles/hover = SubResource("StyleBoxFlat_4l62w")
theme_override_styles/normal = SubResource("StyleBoxFlat_iigv4")
text = "N/A"
text_overrun_behavior = 3
script = ExtResource("1_4l62w")

[node name="del" type="Button" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -39.5
offset_right = -3.0
offset_bottom = 39.5
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("..")
focus_neighbor_right = NodePath("..")
theme = SubResource("Theme_r21rg")
theme_override_colors/font_hover_color = Color(0.572549, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.572669, 1.1792e-06, 3.36915e-07, 1)
theme_override_colors/icon_normal_color = Color(1, 0, 0, 1)
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.572549, 0, 0, 1)
text = "X"

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="focus_entered" from="del" to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="del" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="del" to="." method="_on_del_pressed"]
